--- a/_less/variables.less
+++ b/_less/variables.less
@@ -1,3 +1,5 @@
+@secondary-font: 'Maven Pro', sans-serif;
+
 @font-size-base: 16px;
 @border-radius-base: 0px;
 @border-radius-large: 0px;
@@ -20,7 +22,7 @@
 @very-dark-grey: #2B2B2B;
 @super-dark-grey: #1D1D1D;
 
-
-@normal: #2dbbfb;
+@light: #f7b496;
+@normal: #5a7c94;
 @medium: #ccc;
 @dark: #506F7D;
