--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -13,7 +13,7 @@ layout: default
       </div>
       <div class="col-md-6">
         <p class="description">
-          Breezy is a view engine for JavaScript that renders a live-updating DOM (using <a href="https://github.com/Matt-Esch/virtual-dom/" target="_blank">virtual-dom</a>) in the browser and strings in NodeJS. Create templates for client and server using HTML5 attributes and tags and simple but powerful <a href="#expressions">expressions</a>.
+          Breezy is a view engine for JavaScript that renders a live-updating DOM (using <a href="https://github.com/Matt-Esch/virtual-dom/" target="_blank">virtual-dom</a>) in the browser and strings in NodeJS. Create templates using HTML5 attributes and tags and simple but powerful <a href="#expressions">expressions</a> and use them on the client and the server.
         </p>
         <div class="row github-links text-center">
           <p>
