--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -8,7 +8,7 @@ layout: default
       <div class="col-md-6 with-separator">
         <div class="row text-center tagline">
           <h1>breezy</h1>
-          <h2>An HTML5 view engine</h2>
+          <h2>An isomorphic HTML5 view engine</h2>
         </div>
       </div>
       <div class="col-md-6">
